--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -17,6 +17,52 @@
 <script>
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
+const cities = [];
+fetch(endpoint)
+              .then(blob => blob.json())
+              .then(data => cities.push(...data));
+
+
+function findMatches(wordToMatch, cities){
+  return cities.filter(place => {
+    const regex = new RegExp(wordToMatch, `gi`);
+    return place.city.match(regex) || place.state.match(regex);
+  });
+}
+
+function displayMatches() {
+  const matchArray = findMatches(this.value,cities);
+  //console.table(matchArray);
+  const numberResults = matchArray
+  .sort((a,b) => a>b ? -1:1)
+  .reduce((num,elem)=>num = num+1,0);
+  let html_data = matchArray.map(place => {
+    return `
+      <li>
+        <span class="name">${highlightMatches(place.city,this.value)}, ${highlightMatches(place.state,this.value)}</span>
+        <span class="population">${place.population}</span>
+      </li>
+    `;
+    
+  });
+  html_data.unshift(`<li> <span class="name"> Results: ${numberResults}</span> </li>`);
+  html_data = html_data.join('');
+
+  suggestions.innerHTML = html_data;
+}
+
+function highlightMatches(full_str, h_str){
+  const regex = new RegExp(h_str, 'gi');
+  full_str = full_str.replace(regex, `<span class="hl">${h_str}</span>`);
+  return full_str;
+}
+
+const searchInput = document.querySelector('.search');
+const suggestions = document.querySelector('.suggestions');
+
+searchInput.addEventListener('change',displayMatches);
+searchInput.addEventListener('keyup',displayMatches);
+
 </script>
 </body>
 </html>
